# kushodo_brochure_gen

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  run.bat  run.command  ~$作品情報フォーム.xlsx  ~$冬樟展パンフ.docx  使い方.html
backend/: Dockerfile  Dockerfile.dockerignore  requirements.txt
backend/app/: generator.py  main.py
frontend/: Dockerfile  Dockerfile.dockerignore  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
input/: 作品情報フォーム.xlsx
output/: ~$nerated_template.docx  ~$フレット_テンプレ流し込み_縦書き修正版.docx  パンフレット可変部分.docx  作品一覧.txt
scripts/: generate.py
tools/: generate.py  pyproject.toml
webapp/: README.md  docker-compose.yml
webapp/backend/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
webapp/backend/app/: main.py
webapp/frontend/: Dockerfile  Dockerfile.dockerignore  index.html
webapp/frontend/src/: main.tsx  styles.css
