[project]
name = "kushodo-brochure-web-backend"
version = "0.1.0"
description = "Web API for generating calligraphy exhibition brochures."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.18",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

